@@ -1,3 +1,15 @@
+XXX
+
+	* Version X.X.X
+
+	- expand the sds.at_create CTL to also cover pmemobj_open() (daos-stack/pmdk#5, DAOS-17449)
+	  - Previously, this CTL affected only pmemobj_create().
+	  - Now, it affects both pmemobj_create() and pmemobj_open().
+	  - pmemobj_open() won't be able to open a pool with SDS enabled if the feature is currently
+	  force-disabled.
+	  - Conversely, pmemobj_open() does not issue a warning when attempting to open a pool with SDS disabled
+	  while the feature is force-disabled.
+
 Thu May 23 2024 Oksana Sałyk <oksana.salyk@intel.com>
 
 	* Version 2.1.0
